--- a/lib/interface/bobot_web/live/home.html.heex
+++ b/lib/interface/bobot_web/live/home.html.heex
@@ -29,10 +29,17 @@
 </header>
 
 <main class="flex flex-grow bg-gray-100 text-gray-900 dark:bg-gray-900 dark:text-gray-100">
-<pre class="text-wrap"><%= "#{inspect @current_bot}" %></pre>
+  <div><%= "#{inspect @current_bot}" %></div>
+  <div class="grid grid-cols-2 border border-red">
+    <div>Equipment Cost</div>
+    <div class="text-right">$5,678</div>
+
+    <div>Building Depreciation</div>
+    <div class="text-right">$8,345</div>
+  </div>
 </main>
 
-<dialog :if={@modal[:template]} class="before:bg-purple-800 before:text-white" id="modal" data-title={@modal[:title]}>
+<dialog :if={@modal[:template]} class="bg-gray-100 dark:bg-gray-700 text-700 dark:text-100 before:bg-purple-800 before:text-white" id="modal" data-title={@modal[:title]}>
   <.icon class="close cursor-pointer" name="hero-x-mark-mini" onclick="modal.close()"/>
   <%= 
   if get_in(@modal, [:template]) do 
