--- a/priv/static/assets/app.css
+++ b/priv/static/assets/app.css
@@ -16143,6 +16143,10 @@ select {
   float: right;
 }
 
+.float-left {
+  float: left;
+}
+
 .-m-3 {
   margin: -0.75rem;
 }
@@ -16692,6 +16696,10 @@ select {
   padding: 1rem;
 }
 
+.p-0\.5 {
+  padding: 0.125rem;
+}
+
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -16722,6 +16730,31 @@ select {
   padding-bottom: 1rem;
 }
 
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+.py-0\.5 {
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
+}
+
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
 .pb-4 {
   padding-bottom: 1rem;
 }
@@ -16748,6 +16781,22 @@ select {
 
 .pl-8 {
   padding-left: 2rem;
+}
+
+.pb-0 {
+  padding-bottom: 0px;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
+}
+
+.pt-8 {
+  padding-top: 2rem;
 }
 
 .text-left {
