--- a/priv/static/assets/app.css
+++ b/priv/static/assets/app.css
@@ -16131,6 +16131,14 @@ select {
   top: 1.5rem;
 }
 
+.right-6 {
+  right: 1.5rem;
+}
+
+.right-8 {
+  right: 2rem;
+}
+
 .z-50 {
   z-index: 50;
 }
