--- a/lib/service/dsl/base/templates/defblock.html.heex
+++ b/lib/service/dsl/base/templates/defblock.html.heex
@@ -2,12 +2,12 @@
   <.input_hidden name="ope" value="put" />
   <ul class="mb-5">
     <li>
-      <.input name="name" label="Block name" required pattern="[a-z_]+" 
-        placeholder="You can use a-z and _"/>
+      <.input name="name" label="Block name" required pattern="[a-z_0-9]+" 
+        placeholder="You can use a-z, 0-9 and _" title="You can use a-z, 0-9 and _"/>
     </li>
     <li>
-      <.input name="params" label="Block param(s)" placeholder="Ex: [id, name]" pattern="(|\[.+\])"
-        title="Can be a var name or many vars closed by [] and separated by ,"/>
+      <.input name="params" label="Block param(s)" placeholder="Ex: [id, name]" pattern="(|[a-z0-9_]+|\[[a-z0-9_\, ]+\])"
+        title="Can be empty, a var name, or many vars closed by [] and separated by ,"/>
     </li>
   </ul>
   <.small_button class="float-right" icon="hand-thumb-up-solid" type="submit">
