--- a/lib/interface/bobot_web/live/home.html.heex
+++ b/lib/interface/bobot_web/live/home.html.heex
@@ -13,21 +13,46 @@
       New bot
     </.small_button>
 
+    <div :if={@current_bot != nil} class="float-left font-bold">
+      <%= "#{@current_bot[:name]}" %>
+    </div>
+
     <.small_button :if={@current_bot != nil} 
-      class="ml-auto float-right mr-2" type="button" phx-click="show:settings" icon="cog-mini">
+      class="ml-auto float-right mr-0.5" type="button" phx-click="show:settings" icon="cog-mini">
       Settings
     </.small_button>
 
     <.small_button :if={@current_bot != nil} disabled={not is_list(@current_bot[:settings])}
-      class="float-right mr-2" type="button" phx-click="show:hooks" icon="cube-mini">
+      class="float-right mr-0.5" type="button" phx-click="show:hooks" icon="link">
       Set hooks
     </.small_button>
 
     <.small_button :if={@current_bot != nil} disabled={not is_list(@current_bot[:settings])}
-      class="float-right mr-2" type="button" phx-click="show:defblock" icon="cube-mini">
+      class="float-right mr-0.5" type="button" phx-click="show:defblock" icon="cube-mini">
       Add block
     </.small_button>
-  
+
+    <.small_button :if={@current_bot != nil} disabled={not is_list(@current_bot[:settings])}
+      class={[@current_bot[:changed] && "animate-color" || "", "float-right mr-0.5"]} type="button" phx-click="save-bot" icon="folder-arrow-down">
+      Save
+    </.small_button>
+
+    <.small_button :if={@current_bot != nil} disabled={not is_list(@current_bot[:settings])}
+      class="float-right mr-0.5" type="button" phx-click="view-bot" icon="credit-card-solid">
+      View bot
+    </.small_button>
+
+    <.small_button :if={@current_bot != nil} disabled={not is_list(@current_bot[:settings])}
+      class="float-right mr-0.5" type="button" phx-click="compile-bot" icon="cpu-chip-solid">
+      Compile
+    </.small_button>
+
+    <.small_button :if={@current_bot != nil} disabled={not is_list(@current_bot[:settings])}
+      class="float-right mr-0.5" type="button" phx-click="close-bot" icon="x-mark"
+      onclick="this.value=event.ctrlKey">
+      Close
+    </.small_button>
+
 </header>
 
 <main class="flex flex-grow bg-gray-200 text-gray-900 dark:bg-gray-900 dark:text-gray-100">  
@@ -41,7 +66,11 @@
         params = Macro.to_string(params)
         "#{name} #{params}"
       %>
-      <.icon_button class="edit absolute right-2 top-2 text-gray-600 hover:text-red-800 hover:scale-110" icon="pencil" icon-size="3" phx-click="open-block" value={name}/>
+      <.icon_button class="remove absolute right-2 top-2 text-gray-600 hover:text-red-800 hover:scale-110" 
+        icon="x-circle-solid" icon-size="3"
+        onclick={"confirm_action('Are you sure about to remove <b class=\"text-red-800\">#{name}</b> block?', 'remove_block:#{name}')"}/>
+      <.icon_button class="edit absolute right-6 top-2 text-gray-600 hover:text-red-800 hover:scale-110" 
+        icon="pencil" icon-size="3" phx-click="open-block" value={name}/>
     </div>
     <% end %>
   </span>
@@ -118,8 +147,9 @@
 
 <dialog id="block_editor" phx-update="ignore" class="relative px-0 pb-0 pt-8 before:bg-purple-800 before:font-mono before:text-xs" data-title="">
   <form phx-submit="operation-block" onsubmit="block_text.value = editor.getValue().trim()">
-    <.icon_button type="submit" onclick="editor_set_operation(event, 'commit')" class="commit absolute top-1 right-8 text-white" icon="folder-arrow-down" title="Comit changes (CTRL + click close window)"/>
-    <.icon_button type="submit" onclick="editor_set_operation(event, 'cancel')" class="cancel absolute top-1 right-2 text-white" icon="x-mark-mini" title="CTRL + click to close without save"/>
+    <.icon_button type="submit" onclick="editor_set_operation(event, 'commit')" class="commit editing absolute top-1 right-8 text-white" icon="folder-arrow-down" title="Comit changes (CTRL + click close window)"/>
+    <.icon_button type="submit" onclick="editor_set_operation(event, 'cancel')" class="cancel editing absolute top-1 right-2 text-white" icon="x-mark-mini" title="CTRL + click to close without save"/>
+    <.icon_button type="button" onclick="block_editor.close()" class="cancel reading absolute top-1 right-2 text-white" icon="x-mark-mini"/>
     <.input_hidden name="block_text" value=""/>
     <.input_hidden name="operation" value=""/>
     <.input_hidden name="ctrl" value=""/>
@@ -130,3 +160,21 @@
   </form>
 </dialog>
 
+<dialog id="box_confirm_action" phx-update="ignore" class="relative px-0 pb-0 pt-8 before:bg-purple-800 before:text-xs" data-title="Please confirm...">
+  <form phx-submit="confirmed-action">
+    <.input_hidden name="action" value=""/>
+    <div class="grid mb-5 grid grid-cols-2">
+      <div id="message" class="w-64 text-center col-span-2 text-xs p-2 mb-2 px-4"></div>
+      <div class="text-center">
+        <.small_button class="w-24 place-content-center bg-gray-700" icon="x-circle-solid" type="button" onclick="box_confirm_action.close()">
+          Cancel
+        </.small_button>
+      </div>
+      <div class="text-center">
+        <.small_button class="w-24 bg-red-700" icon="hand-thumb-up-solid" type="submit">
+          Confirm
+        </.small_button>
+      </div>
+    </div>
+  </form>
+</dialog>
