--- a/priv/static/assets/extend.css
+++ b/priv/static/assets/extend.css
@@ -16,6 +16,8 @@ dialog {
   border: 1px solid #6b21a8;
   padding: 20px;
   border-radius: 8px;
+  border-bottom-left-radius: 2px;
+  border-bottom-right-radius: 2px;
   padding-top: 48px;
   box-shadow: 0 0 10px 0px #6b21a8;  
 }
@@ -43,6 +45,10 @@ dialog .close {
   color: white;
 }
 
+button.small-button {
+  min-width: 6rem;
+}
+
 input[required], select[required] {
   outline-width: 1px;
   outline-color: blueviolet;
@@ -56,6 +62,11 @@ input[required], select[required] {
 .ace_editor {
   width: 60vw;
   height: 70vh;
+}
+
+.editor-status-bar {
+  padding-top: 4px;
+  padding-bottom: 4px;
 }
 
 
@@ -81,6 +92,12 @@ input[required], select[required] {
   animation-timing-function: cubic-bezier(.95,.05,.8,.04);
 }
 
+.animate-color {
+  animation: animate-color;
+  animation-duration: 1s;  
+  animation-iteration-count: infinite;
+}
+
 @keyframes minimize {
   0% {
     transform: scaleX(1) scaleY(1);
@@ -101,6 +118,17 @@ input[required], select[required] {
   }
   100% {
     transform: scaleX(1) scaleY(1);
+  }
+}
+
+@keyframes animate-color {
+  0% {
+  }
+  50% {
+    background-color: #c81010;
+    box-shadow: 0 0 2px 2px black;
+  }
+  100% {
   }
 }
 
