--- a/lib/interface/bobot_web/components/layouts/root.html.heex
+++ b/lib/interface/bobot_web/components/layouts/root.html.heex
@@ -15,6 +15,7 @@
     <script defer phx-track-static type="text/javascript" src={~p"/assets/extend.js"}></script>
     <script defer phx-track-static type="text/javascript" src={~p"/assets/ace/ace.js"}></script>
     <script defer phx-track-static type="text/javascript" src={~p"/assets/ace/ext-statusbar.js"}></script>
+    <script defer phx-track-static type="text/javascript" src={~p"/assets/leader-line.min.js"}></script>
   </head>
   <body class="flex flex-col h-screen w-screen">
     <%= @inner_content %> 
