--- a/lib/interface/bobot_web/live/home.html.heex
+++ b/lib/interface/bobot_web/live/home.html.heex
@@ -1,205 +1,26 @@
 <.flash_group flash={@flash} />
 
 <header class="h-12 flex items-center gap-x-2 bg-purple-500 p-1 text-gray-100 dark:bg-purple-200 dark:text-gray-200">
-  
-    <form phx-change="select-bot">
-    <.select :if={@current_bot == nil} inline={true} label="Select Bot" 
-      name="bot_name" 
-      options={@bots |> Map.keys() |> Enum.map(fn b -> (b in @active_bots) && "#{b} *" || b end)}
-      value={@current_bot[:name]} small={true}
-      class="!bg-purple-100 !rounded"/>
-    </form>
+  <div class="invert bg-white rounded-lg p-0 px-1 opacity-50">
+    <img class="inline-block mt-1" src={~p"/images/bobot.png"} width="30" />
+    <div class="float-right inline-block text-black py-1.5 pl-2">Bobot v<%= Application.spec(:bobot, :vsn) %></div>
+  </div>
 
-    <.small_button :if={@current_bot == nil} value="modal:New bot..."
-      type="button" phx-click="show:defbot" icon="plus-circle-mini">
-      New bot
-    </.small_button>
+  <.small_button 
+    class="ml-auto float-right mr-0.5" type="button" onclick="location.href='/bots'" icon="wrench-mini">
+    Bots
+  </.small_button>
 
-    <div :if={@current_bot != nil} class="float-left font-bold">
-      <%= "#{@current_bot[:name]}" %>
-    </div>
-
-    <.small_button :if={@current_bot != nil} 
-      class="ml-auto float-right mr-0.5" type="button" phx-click="show:settings" icon="cog-mini">
-      Settings
-    </.small_button>
-
-    <.small_button :if={@current_bot != nil} disabled={not is_list(@current_bot[:settings])}
-      class="float-right mr-0.5" type="button" phx-click="show:hooks" icon="link">
-      Set hooks
-    </.small_button>
-
-    <.small_button :if={@current_bot != nil} disabled={not is_list(@current_bot[:settings])}
-      class="float-right mr-0.5" type="button" phx-click="show:defblock" icon="cube-mini">
-      Add block
-    </.small_button>
-
-    <.small_button :if={@current_bot != nil} disabled={not is_list(@current_bot[:settings])}
-      class={[@current_bot[:changed] && "animate-color" || "", "float-right mr-0.5"]} type="button" 
-      phx-click="save-bot" icon="folder-arrow-down-solid">
-      Save
-    </.small_button>
-
-    <.small_button :if={@current_bot != nil} disabled={not is_list(@current_bot[:settings])}
-      class="float-right mr-0.5" type="button" phx-click="view-bot" icon="credit-card-solid">
-      View bot
-    </.small_button>
-
-    <.small_button :if={@current_bot != nil} disabled={not is_list(@current_bot[:settings])}
-      class="float-right mr-0.5" type="button" phx-click="compile-bot" icon="cpu-chip-solid">
-      Compile
-    </.small_button>
-
-    <.small_button :if={@current_bot != nil} disabled={not is_list(@current_bot[:settings])}
-      class="float-right mr-0.5" type="button" phx-click="close-bot" icon="x-mark"
-      onclick="this.value=event.ctrlKey">
-      Close
-    </.small_button>
+  <.small_button 
+    class="float-right mr-0.5" type="button" onclick="location.href='/apis'" icon="arrows-right-left">
+    APIs
+  </.small_button>
 
 </header>
 
-<main class="flex flex-grow bg-gray-200 text-gray-900 dark:bg-gray-900 dark:text-gray-100">  
-  
-  <!-- Blocks -->
-  <span :if={@current_bot} class="block flex flex-col flex-wrap">
-    <%= for {name, block_data} <- Map.to_list(@current_bot[:blocks]) do %>
-    <span class="defblock">
-      <div data-block-name={name} class={[
-        "flex-none inline-block min-w-64 relative font-mono text-xs h-fit-content m-2 p-2 pr-10",
-        "border-2 border-purple-400 bg-white rounded-lg"
-        ]}> 
-        <%= 
-          %{params: params} = block_data
-          params = Macro.to_string(params)
-          params = params == "[]" && "" || params
-          raw("<b>#{name}</b> <div class=\"float-right\">#{params}</div>")
-        %>
-        <.icon_button class="remove absolute right-2 top-2 text-gray-600 hover:text-red-800 hover:scale-110" 
-          icon="x-circle-solid" icon-size="3"
-          onclick={"confirm_action('Are you sure about to remove <b class=\"text-red-800\">#{name}</b> block?', 'remove_block:#{name}')"}/>
-        <.icon_button class="edit absolute right-6 top-2 text-gray-600 hover:text-red-800 hover:scale-110" 
-          icon="pencil-solid" icon-size="3" phx-click="open-block" value={name}/>      
-      </div>
-      <!-- <div class="inline-block relative -top-1 ml-32 w-0 h-0" data-block-name-anchor={name}></div> -->
-    </span>
-    <% end %>    
-  </span>
-
-  <!-- Current bot info -->
-  <div :if={@current_bot != nil} phx-click="maximize-box-status" id="current-bot-info" class={[@box_status, "overflow-hidden w-60 text-xs mt-12 border-4 border-purple-900 bottom-0 bg-purple-700 text-white rounded-lg m-1 fixed right-1 top-1"]}>
-    <div class="w-full">
-      <table class="table-auto w-full border-b-2 border-purple-900">
-        <thead class="bg-purple-900 text-gray-200">
-          <tr>
-            <th class="p-2" colspan="2">
-              Current Bot
-              <button class="absolute right-1 top-1 cursor-pointer" phx-click="minimize-box-status">
-                <.icon name="hero-chevron-down" class="ml-1 h-5 w-5"/>
-              </button>
-            </th>
-          </tr>
-        </thead>
-        <tbody class="bg-purple-200 text-gray-800">
-          <tr class="border-1 border-b border-purple-400">
-            <td class="p-1 pl-2 font-bold">Name</td>
-            <td class="p-1 pr-2 text-right"><%= @current_bot[:name] %></td>
-          </tr>
-          <tr :if={@current_bot[:settings] != nil} class="border-1 border-b border-purple-400">
-            <td class="p-1 pl-2 font-bold">Type</td>
-            <td class="p-1 pr-2 text-right"><%= @current_bot[:settings][:type] %></td>
-          </tr>
-        </tbody>
-      </table>
-      <table :if={@current_bot[:settings] != nil} class="table-fixed w-full">
-        <thead class="bg-purple-900 text-gray-200">
-          <tr>
-            <th class="p-2" colspan="2">Settings</th>
-          </tr>
-        </thead>
-        <tbody :if={@current_bot[:settings][:config] != []} class="bg-purple-200 text-gray-800">
-          <%= for {key, value} <- @current_bot[:settings][:config] do %>
-          <tr class="border-1 border-b border-purple-400">
-            <td class="p-1 pl-2 font-bold"><%= key %></td>
-            <td class="p-1 pr-2 text-right whitespace-normal"><%= Macro.to_string(value) %></td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
-      <table :if={@current_bot[:hooks] != []} class="table-fixed w-full">
-        <thead class="bg-purple-900 text-gray-200">
-          <tr>
-            <th class="p-2" colspan="2">Hooks</th>
-          </tr>
-        </thead>
-        <tbody class="bg-purple-200 text-gray-800">
-          <%= for {key, value} <- @current_bot[:hooks] do %>
-          <tr class="border-1 border-b border-purple-400">
-            <td class="p-1 pl-2 font-bold"><%= key %></td>
-            <td class="p-1 pr-2 text-right"><%= Macro.to_string(value) %></td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
+<main class="grid flex-grow place-content-center bg-gray-200 text-gray-900 dark:bg-gray-900 dark:text-gray-100">    
+  <div class="blur">
+    <img class="invert" src={~p"/images/bobot.png"} width="500" style="height: 500px !important; opacity: 20%;"/>
   </div>
-
 </main>
 
-<dialog :if={@modal[:template]} class="bg-gray-100 dark:bg-gray-700 text-700 dark:text-100 before:bg-purple-800 before:text-white" id="modal" data-title={@modal[:title]}>
-  <.icon class="close cursor-pointer" name="hero-x-mark-mini" onclick="modal.close()"/>
-  <%= 
-  if get_in(@modal, [:template]) do 
-    %{module: module, sentency: sentency} = @modal[:template]
-    apply(module, :show, [sentency, assigns]) 
-  end
-  %>
-</dialog>
-
-<dialog id="bobot_editor" phx-update="ignore"  data-title="" 
-  class="relative px-0 pb-0 pt-8 before:bg-purple-800 before:font-mono before:text-xs">
-  <form phx-submit="operation-editor" onsubmit="block_text.value = editor.getValue().trim()">
-    <!-- editing mode -->
-    <.icon_button type="submit" onclick="editor_set_operation(event, 'commit')" 
-      class="commit editing absolute top-1 right-8 text-white" icon="folder-arrow-down-solid" 
-      title="Comit changes (CTRL + click close window)"/>
-    <.icon_button type="submit" onclick="editor_set_operation(event, 'cancel')" 
-      class="cancel editing absolute top-1 right-2 text-white" icon="x-mark-mini" 
-      title="CTRL + click to close without save"/>
-    <!-- readonly mode -->
-    <.icon_button type="button" onclick="editor_set_readonly(false)" 
-      class="reading absolute top-1 right-8 text-white" icon="pencil-solid" icon-size="3"
-      title="Change to editing mode"/>
-    <.icon_button type="button" onclick="bobot_editor.close()"
-      class="cancel reading absolute top-1 right-2 text-white" icon="x-mark-mini"/>
-
-    <.input_hidden name="block_text" value=""/>
-    <.input_hidden name="operation" value=""/>
-    <.input_hidden name="ctrl" value=""/>
-
-    <div id="bobot-editor-text"></div>
-    <div id="editor-status-bar" class="editor-status-bar text-right px-2 text-xs bg-purple-800 text-white">
-      <div class="info float-left"></div>
-    </div>
-  </form>
-</dialog>
-
-<dialog id="box_confirm_action" phx-update="ignore" data-title="Please confirm..." 
-  class="relative px-0 pb-0 pt-8 before:bg-purple-800 before:text-xs">
-  <form phx-submit="confirmed-action">
-    <.input_hidden name="action" value=""/>
-    <div class="grid mb-5 grid grid-cols-2">
-      <div id="message" class="w-64 text-center col-span-2 text-xs p-2 mb-2 px-4"></div>
-      <div class="text-center">
-        <.small_button class="w-24 place-content-center bg-gray-700" icon="x-circle-solid" 
-          type="button" onclick="box_confirm_action.close()">
-          Cancel
-        </.small_button>
-      </div>
-      <div class="text-center">
-        <.small_button class="w-24 bg-red-700" icon="hand-thumb-up-solid" type="submit">
-          Confirm
-        </.small_button>
-      </div>
-    </div>
-  </form>
-</dialog>
