--- a/lib/interface/bobot_web/live/bots.html.heex
+++ b/lib/interface/bobot_web/live/bots.html.heex
@@ -2,9 +2,8 @@
 
 <header class="h-12 flex items-center gap-x-2 bg-purple-500 p-1 text-gray-100 dark:bg-purple-200 dark:text-gray-200">
   
-    <.small_button :if={@current_bot == nil}
-      type="button" onclick="location.href='/'" icon="arrow-long-left" icon-pos="left">
-      Go back 
+    <.small_button :if={@current_bot == nil} class="no-text"
+      type="button" onclick="location.href='/'" icon="arrow-long-left" icon-pos="left">      
     </.small_button>
 
     <form phx-change="select-bot">
@@ -20,8 +19,11 @@
       New bot
     </.small_button>
 
-    <div :if={@current_bot != nil} class="float-left font-bold">
-      <%= "#{@current_bot[:name]}" %>
+    <div :if={@current_bot != nil} class="float-left font-bold invert bg-white rounded-lg p-0 pl-1 pr-4 opacity-50">
+      <img class="inline-block mt-1" src={~p"/images/bobot.png"} width="30" />
+      <div class="float-right inline-block text-black py-1.5 pl-2">
+        BOT: <%= "#{@current_bot[:name]}" %>
+      </div>
     </div>
 
     <.small_button :if={@current_bot != nil} 
@@ -63,7 +65,10 @@
 
 </header>
 
-<main class="flex flex-grow bg-gray-200 text-gray-900 dark:bg-gray-900 dark:text-gray-100">  
+<main class="relative flex flex-grow bg-gray-200 text-gray-900 dark:bg-gray-900 dark:text-gray-100">  
+  <div class="grid place-content-center blur absolute top-0 left-0 w-full h-full">
+    <img class="invert" src={~p"/images/bobot.png"} width="500" style="height: 500px !important; opacity: 20%;"/>
+  </div>
   
   <!-- Blocks -->
   <span :if={@current_bot} class="block flex flex-col flex-wrap">
