--- a/lib/interface/bobot_web/live/apis.html.heex
+++ b/lib/interface/bobot_web/live/apis.html.heex
@@ -19,12 +19,9 @@
       New API
     </.small_button>
 
-    <div :if={@current_api != nil} class="float-left font-bold invert bg-white rounded-lg p-0 pl-1 pr-4 opacity-50">
-      <img class="inline-block mt-1" src={~p"/images/bobot.png"} width="30" />
-      <div class="float-right inline-block text-black py-1.5 pl-2">
-        API: <%= "#{@current_api[:name]}" %>
-      </div>
-    </div>
+    <.tiny_logo :if={@current_api != nil}>
+      API: <%= "#{@current_api[:name]}" %>
+    </.tiny_logo>
 
     <.small_button :if={@current_api != nil}
       class={[@current_api[:changed] && "animate-color" || "", "ml-auto float-right mr-0.5"]} type="button" 
@@ -51,9 +48,7 @@
 </header>
 
 <main class="flex relative flex-grow bg-gray-200 text-gray-900 dark:bg-gray-900 dark:text-gray-100">  
-  <div class="grid place-content-center blur absolute top-0 left-0 w-full h-full">
-    <img class="invert" src={~p"/images/bobot.png"} width="500" style="height: 500px !important; opacity: 20%;"/>
-  </div>
+  <.bg_logo/>
 </main>
 
 <dialog :if={@modal[:template]} class="bg-gray-100 dark:bg-gray-700 text-700 dark:text-100 before:bg-purple-800 before:text-white" id="modal" data-title={@modal[:title]}>
