--- a/lib/interface/bobot_web/live/bots.html.heex
+++ b/lib/interface/bobot_web/live/bots.html.heex
@@ -19,12 +19,9 @@
       New bot
     </.small_button>
 
-    <div :if={@current_bot != nil} class="float-left font-bold invert bg-white rounded-lg p-0 pl-1 pr-4 opacity-50">
-      <img class="inline-block mt-1" src={~p"/images/bobot.png"} width="30" />
-      <div class="float-right inline-block text-black py-1.5 pl-2">
-        BOT: <%= "#{@current_bot[:name]}" %>
-      </div>
-    </div>
+    <.tiny_logo :if={@current_bot != nil}>
+      BOT: <%= "#{@current_bot[:name]}" %>
+    </.tiny_logo>
 
     <.small_button :if={@current_bot != nil} 
       class="ml-auto float-right mr-0.5" type="button" phx-click="show:settings" icon="cog-mini">
@@ -66,10 +63,8 @@
 </header>
 
 <main class="relative flex flex-grow bg-gray-200 text-gray-900 dark:bg-gray-900 dark:text-gray-100">  
-  <div class="grid place-content-center blur absolute top-0 left-0 w-full h-full">
-    <img class="invert" src={~p"/images/bobot.png"} width="500" style="height: 500px !important; opacity: 20%;"/>
-  </div>
-  
+  <.bg_logo/>  
+
   <!-- Blocks -->
   <span :if={@current_bot} class="block flex flex-col flex-wrap">
     <%= for {name, block_data} <- Map.to_list(@current_bot[:blocks]) do %>
